<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/back_img_repeat"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/back_explanation_border"
        android:textColor="#ffffff"
        android:text="@string/point_explanation"/>
    <TextView
        android:id="@+id/space"
        android:layout_width="fill_parent"
        android:layout_height="10dp"
        android:text=""/>
    <TableLayout
        android:id="@+id/TableLayout07"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TableRow>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/point_price"
                android:textColor="#000000"
                android:textSize="17sp"/>
            <EditText
                android:text="@+id/PointPrice"
                android:id="@+id/PointPrice"
                android:inputType="numberDecimal"
                android:layout_width="110dp"
                android:layout_height="45dp"
                android:gravity="right"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/money_unit"
                android:textColor="#000000"
                android:textSize="17sp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/point_rate"
                android:textColor="#000000"
                android:textSize="17sp"/>
            <EditText
                android:text="@+id/PointRate"
                android:id="@+id/PointRate"
                android:inputType="number"
                android:layout_width="110dp"
                android:layout_height="45dp"
                android:gravity="right"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/point_percent_unit"
                android:textColor="#000000"
                android:textSize="17sp"/>
        </TableRow>
    </TableLayout>
    <TableLayout
        android:id="@+id/TableLayout08"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <TableRow>
            <Button
                android:text="@string/button_point_calc"
                android:id="@+id/ButtonPointCalc"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_gravity="center"/>
            <Button
                android:text="@string/button_point_reset"
                android:id="@+id/ButtonPointReset"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_gravity="center"/>
        </TableRow>
    </TableLayout>
    <TextView
        android:id="@+id/space"
        android:layout_width="fill_parent"
        android:layout_height="5dp"
        android:background="@drawable/back_explanation_border"
        android:text=""/>
    <TextView
        android:id="@+id/space"
        android:layout_width="fill_parent"
        android:layout_height="10dp"
        android:text=""/>
    <TableLayout
        android:id="@+id/TableLayout09"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/point_get_point"
                android:textColor="#000000"
                android:textSize="17sp"/>
            <TextView
                android:id="@+id/PointGetPoint"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="top|right"
                android:textColor="#ff0000"
                android:textSize="25sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/point_unit"
                android:textColor="#000000"
                android:textSize="17sp"/>
        </TableRow>
    </TableLayout>
    <TableLayout
        android:id="@+id/TableLayout10"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/point_exclude_point"
                android:textColor="#000000"
                android:textSize="17sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="@string/dollar_unit"
                android:textSize="17sp"/>
            <TextView
                android:id="@+id/PointExcludePoint"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="top|right"
                android:textColor="#ff9900"
                android:textSize="25sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/money_unit"
                android:textColor="#000000"
                android:textSize="17sp"/>
        </TableRow>
    </TableLayout>
    <TextView
        android:id="@+id/space"
        android:layout_width="fill_parent"
        android:layout_height="20px"
        android:text=""/>
</LinearLayout>
