<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/back_img_repeat"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/back_explanation_border"
        android:textColor="#ffffff"
        android:text="@string/discount_explanation"/>
    <TextView
        android:id="@+id/space"
        android:layout_width="fill_parent"
        android:layout_height="7dp"
        android:text=""/>
    <TableLayout
        android:id="@+id/TableLayout01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TableRow>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="@string/discount_pre_price"
                android:textSize="17sp"/>
            <EditText
                android:text="@+id/DiscountPrePrice"
                android:id="@+id/DiscountPrePrice"
                android:inputType="numberDecimal"
                android:layout_width="110dp"
                android:layout_height="45dp"
                android:textColorHighlight="#ff0"
                android:gravity="right"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="@string/money_unit"
                android:textSize="17sp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="@string/discount_name"
                android:textSize="17sp"/>
            <EditText
                android:text="@+id/DiscountNum"
                android:id="@+id/DiscountNum"
                android:inputType="number"
                android:layout_width="110dp"
                android:layout_height="45dp"
                android:gravity="right"/>
            <Spinner
                android:id="@+id/DiscountKind"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:textSize="17sp"
                android:prompt="@string/discount_prompt"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="@string/discount_weight"
                android:textSize="17sp"/>
            <EditText
                android:text="@+id/DiscountWeight"
                android:id="@+id/DiscountWeight"
                android:inputType="number"
                android:layout_width="110dp"
                android:layout_height="45dp"
                android:gravity="right"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="@string/discount_weight_unit"
                android:textSize="17sp"/>
        </TableRow>
    </TableLayout>
    <TableLayout
        android:id="@+id/TableLayout02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <TableRow>
            <Button
                android:text="@string/button_discount_calc"
                android:id="@+id/ButtonDiscountCalc"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_gravity="center"/>
            <Button
                android:text="@string/button_discount_reset"
                android:id="@+id/ButtonDiscountReset"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_gravity="center"/>
        </TableRow>
    </TableLayout>
    <TextView
        android:id="@+id/space"
        android:layout_width="fill_parent"
        android:layout_height="5dp"
        android:background="@drawable/back_explanation_border"
        android:text=""/>
    <TextView
        android:id="@+id/space"
        android:layout_width="fill_parent"
        android:layout_height="10dp"
        android:text=""/>
    <TableLayout
        android:id="@+id/TableLayout03"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="@string/discount_price_name"
                android:textSize="17sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="@string/dollar_unit"
                android:textSize="17sp"/>
            <TextView
                android:id="@+id/DiscountPrice"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_gravity="top|right"
                android:textColor="#ff6600"
                android:textSize="25sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="@string/money_unit"
                android:textSize="17sp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="@string/discount_profit_name"
                android:textSize="17sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="@string/dollar_unit"
                android:textSize="17sp"/>
            <TextView
                android:id="@+id/DiscountDifferencePrice"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:gravity="top|right"
                android:textColor="#ff0000"
                android:textSize="25sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/money_unit"
                android:textColor="#000000"
                android:textSize="17sp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/discount_weight_name"
                android:textColor="#000000"
                android:textSize="17sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="@string/dollar_unit"
                android:textSize="17sp"/>
            <TextView
                android:id="@+id/DiscountWeightPrice"
                android:layout_width="130dp"
                android:layout_height="wrap_content" 
                android:layout_gravity="top|right"
                android:textColor="#ff9900"
                android:textSize="25sp"/>
            <TextView
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content" 
                android:text="@string/money_unit"
                android:textColor="#000000"
                android:textSize="17sp"/>
        </TableRow>
    </TableLayout>
    <TextView
        android:id="@+id/space"
        android:layout_width="fill_parent"
        android:layout_height="20dp"
        android:text=""/>
</LinearLayout>
