<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/back_img_repeat"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/back_explanation_border"
        android:textColor="#ffffff"
        android:text="@string/tax_explanation"/>
    <TextView
        android:id="@+id/space"
        android:layout_width="fill_parent"
        android:layout_height="7dp"
        android:text=""/>
    <TextView
        android:id="@+id/space"
        android:layout_width="fill_parent"
        android:layout_height="10dp"
        android:text=""/>
    <TableLayout
        android:id="@+id/TableLayout01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TableRow>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text="@string/point_price"
                    android:textColor="#000000"
                    android:textSize="17sp"
                    android:gravity="left|center"/>
                <TextView
                    android:id="@+id/space"
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:text=""/>
                <EditText
                    android:text="@+id/TaxPrice"
                    android:id="@+id/TaxPrice"
                    android:inputType="numberDecimal"
                    android:layout_width="110dp"
                    android:layout_height="45dp"
                    android:gravity="right"/>
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/money_unit"
                    android:textColor="#000000"
                    android:textSize="17sp"/>
            </LinearLayout>
        </TableRow>
        <TableRow>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <LinearLayout android:layout_width="wrap_content"
                              android:layout_height="wrap_content">
                    <RadioGroup android:id="@+id/tax_type"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">
                        <RadioButton android:id="@+id/WithoutTax"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="@string/without_tax"
                                     android:textColor="#000000"
                                     android:checked="true"/>
                        <TextView android:id="@+id/space"
                                  android:layout_width="20dp"
                                  android:layout_height="wrap_content"
                                  android:text=""/>
                        <RadioButton android:id="@+id/IncludeTax"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="@string/include_tax"
                                     android:textColor="#000000"/>
                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>
        </TableRow>
    </TableLayout>

    <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:gravity="center_horizontal">
        <Button
            android:text="@string/button_tax_5_percent"
            android:id="@+id/ButtonTax5PerCalc"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:textSize="17sp"/>
        <Button
            android:text="@string/button_tax_8_percent"
            android:id="@+id/ButtonTax8PerCalc"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:textSize="17sp"/>
        <Button
            android:text="@string/button_tax_10_percent"
            android:id="@+id/ButtonTax10PerCalc"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:textSize="17sp"/>
        <Button
            android:text="@string/button_per_reset"
            android:id="@+id/ButtonTaxReset"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_gravity="center"/>
        </LinearLayout>

    <TextView
        android:id="@+id/space"
        android:layout_width="fill_parent"
        android:layout_height="5dp"
        android:background="@drawable/back_explanation_border"
        android:text=""/>
    <TextView
        android:id="@+id/space"
        android:layout_width="fill_parent"
        android:layout_height="10dp"
        android:text=""/>
    <TableLayout
        android:id="@+id/TableLayout03"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textColor="#000000"
                android:textSize="17sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="@string/dollar_unit"
                android:textSize="17sp"/>
            <TextView
                android:id="@+id/EstablishedPrice"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_gravity="top|right"
                android:textColor="#ff9900"
                android:textSize="25sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/money_unit"
                android:textColor="#000000"
                android:textSize="17sp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/consumption_tax"
                android:textColor="#000000"
                android:textSize="17sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="@string/dollar_unit"
                android:textSize="17sp"/>
            <TextView
                android:id="@+id/CosumptionTax"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_gravity="top|right"
                android:textColor="#ff9900"
                android:textSize="25sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/money_unit"
                android:textColor="#000000"
                android:textSize="17sp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:textColor="#000000"
                android:textSize="17sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="@string/dollar_unit"
                android:textSize="17sp"/>
            <TextView
                android:id="@+id/TotalPrice"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_gravity="top|right"
                android:textColor="#ff0000"
                android:textSize="25sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/money_unit"
                android:textColor="#000000"
                android:textSize="17sp"/>
        </TableRow>
    </TableLayout>
    <TextView
        android:id="@+id/space"
        android:layout_width="fill_parent"
        android:layout_height="20px"
        android:text=""/>
</LinearLayout>
