<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/back_img_repeat"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/back_explanation_border"
        android:textColor="#ffffff"
        android:text="@string/per_explanation"/>
    <TextView
        android:id="@+id/space"
        android:layout_width="fill_parent"
        android:layout_height="7dp"
        android:text=""/>
    <TableLayout
        android:id="@+id/TableLayout04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TableRow
            android:background="@drawable/back_explanation_border">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="@string/per_price"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="@string/per_weight_name"/>
            <TextView
                android:id="@+id/PerWeightPerPrice"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:layout_span="2"/>
        </TableRow>
        <TableRow>
            <EditText
                android:text="@+id/PerPrice1"
                android:id="@+id/PerPrice1"
                android:inputType="numberDecimal"
                android:layout_width="90dp"
                android:layout_height="45dp"
                android:gravity="right"/>
            <EditText
                android:text="@+id/PerWeight1"
                android:id="@+id/PerWeight1"
                android:inputType="number"
                android:layout_width="90dp"
                android:layout_height="45dp"
                android:gravity="right"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="@string/dollar_unit"
                android:textSize="17sp"/>
            <TextView
                android:id="@+id/PerWeightPrice1"
                android:layout_width="115dp"
                android:layout_height="wrap_content" 
                android:layout_gravity="top|right"
                android:textSize="25sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/money_unit"
                android:textColor="#000000"
                android:textSize="17sp"/>
        </TableRow>
        <TableRow>
            <EditText
                android:text="@+id/PerPrice2"
                android:id="@+id/PerPrice2"
                android:inputType="numberDecimal"
                android:layout_width="90dp"
                android:layout_height="45dp"
                android:gravity="right"/>
            <EditText
                android:text="@+id/PerWeight2"
                android:id="@+id/PerWeight2"
                android:inputType="number"
                android:layout_width="90dp"
                android:layout_height="45dp"
                android:gravity="right"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="@string/dollar_unit"
                android:textSize="17sp"/>
            <TextView
                android:id="@+id/PerWeightPrice2"
                android:layout_width="115dp"
                android:layout_height="wrap_content" 
                android:layout_gravity="top|right"
                android:textColor="#000000"
                android:textSize="25sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/money_unit"
                android:textColor="#000000"
                android:textSize="17sp"/>
        </TableRow>
        <TableRow>
            <EditText
                android:text="@+id/PerPrice3"
                android:id="@+id/PerPrice3"
                android:inputType="numberDecimal"
                android:layout_width="90dp"
                android:layout_height="45dp"
                android:gravity="right"/>
            <EditText
                android:text="@+id/PerWeight3"
                android:id="@+id/PerWeight3"
                android:inputType="number"
                android:layout_width="90dp"
                android:layout_height="45dp"
                android:gravity="right"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="@string/dollar_unit"
                android:textSize="17sp"/>
            <TextView
                android:id="@+id/PerWeightPrice3"
                android:layout_width="115dp"
                android:layout_height="wrap_content" 
                android:layout_gravity="top|right"
                android:textColor="#000000"
                android:textSize="25sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/money_unit"
                android:textColor="#000000"
                android:textSize="17sp"/>
        </TableRow>
    </TableLayout>
    <TableLayout
        android:id="@+id/TableLayout05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center">
        <TableRow>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/per_weight_standard"
                android:textColor="#000000"
                android:textSize="17sp"/>
            <Spinner
                android:id="@+id/StandardKind"
                android:layout_width="100dp"
                android:layout_height="45dp"
                android:textSize="17sp"
                android:prompt="@string/standard_prompt"/>
        </TableRow>
    </TableLayout>
    <TextView
        android:id="@+id/space"
        android:layout_width="fill_parent"
        android:layout_height="20dp"
        android:text=""/>
    <TableLayout
        android:id="@+id/TableLayout06"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <TableRow>
            <Button
                android:text="@string/button_per_calc"
                android:id="@+id/ButtonPerCalc"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_gravity="center"/>
            <Button
                android:text="@string/button_per_reset"
                android:id="@+id/ButtonPerReset"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_gravity="center"/>
        </TableRow>
    </TableLayout>
    <TextView
        android:id="@+id/space"
        android:layout_width="fill_parent"
        android:layout_height="20dp"
        android:text=""/>
</LinearLayout>
